# Lidar_filter

./: .gitignore  CMakeLists.txt
distance_filter/detect_results/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  20.txt  23.txt  24.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  (+67 more)
include/: Kalman.h  lidar_main.h
src/: Kalman.cpp  lidar_main.cpp
waves_filter/: CMakeLists.txt  package.xml
waves_filter/data/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
waves_filter/include/: lidar_main.h
waves_filter/src/: lidar_main.cpp
